[package]
name = "zeta-note"
version = "0.1.1"
authors = ["Artem Pyanykh <artem.pyanykh@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[dependencies]
lsp-document = { path = "lsp-document"}

anyhow = "1.0"
clap = "3.0.0-beta.2"
futures = "0.3.13"
glob = "0.3.0"
lsp-server = "0.5.0"
lsp-types = "0.88.0"
once_cell = "1.8.0"
pulldown-cmark = { version = "0.8", default-features = false }
regex = "1.0"
salsa = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1.4"
tokio = { version = "1.2.0", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
url = "2.2.0"

[dev-dependencies]
insta = "1.7.1"
pretty_assertions = "0.7.1"

[workspace]
members = ["lsp-document"]
