[package]
name = "zeta-note"
version = "0.1.8"
authors = ["Artem Pyanykh <artem.pyanykh@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/artempyanykh/zeta-note"
repository = "https://github.com/artempyanykh/zeta-note"
description = "Markdown LSP server for easy note-taking with cross-references and diagnostics"
categories = ["command-line-utilities"]
keywords = ["language", "server", "lsp", "vscode", "markdown"]

[dependencies]
lsp-document = { path = "lsp-document", version = "0.6.0" }

anyhow = "1.0"
atty = "0.2"
clap = { version = "3.1.0", features = ["derive", "cargo"] }
futures = "0.3.13"
glob = "0.3.0"
lsp-server = "0.5.0"
lsp-types = "0.93.0"
once_cell = "1.8.0"
pulldown-cmark = { version = "0.9", default-features = false }
regex = "1.0"
salsa = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1.4"
tokio = { version = "1.9", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
url = "2.2.0"

[dev-dependencies]
insta = "1.7.1"
pretty_assertions = "0.7.1"

[workspace]
members = ["lsp-document"]
